--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.4'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.1"
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
